<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fallback_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:background="@color/kickout_background" >


    <ImageView
        android:id="@+id/kickout_clock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:background="@drawable/img_overloadpage"/>

    <RelativeLayout
        android:layout_width="@dimen/kickout_box_width"
        android:gravity="center_horizontal"
        android:background="@color/white_95_op"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_60px"
        android:layout_marginRight="@dimen/margin_60px"
        android:layout_marginLeft="@dimen/margin_60px"
        android:layout_marginEnd="@dimen/margin_60px"
        android:layout_marginStart="@dimen/margin_60px"
        android:paddingLeft="@dimen/margin_30px"
        android:paddingRight="@dimen/margin_30px"
        android:paddingStart="@dimen/margin_30px"
        android:paddingEnd="@dimen/margin_30px"
        android:paddingTop="@dimen/margin_40px"
        android:paddingBottom="@dimen/margin_60px"
        android:layout_alignParentTop="true"
        android:visibility="visible"
        android:layout_centerHorizontal="true">

        <ImageView
            android:id="@+id/kickout_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="@drawable/img_splashlogo"
            android:layout_marginBottom="@dimen/margin_40px"/>

        <com.mobile.components.customfontviews.TextView
            android:id="@+id/kickout_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:fontFamily="@string/bamilo_bold_font"
            android:textStyle="bold"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/margin_60px"
            android:layout_below="@id/kickout_logo"
            android:text="@string/kickout_page_title"
            android:textColor="@color/color_accent"
            android:textSize="@dimen/text_xl" />

        <com.mobile.components.customfontviews.TextView
            android:id="@+id/kickout_first_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:fontFamily="@string/bamilo_regular_font"
            android:layout_below="@id/kickout_title"
            android:text="@string/kickout_page_text1"
            android:textColor="@color/grey_middledark"
            android:layout_marginBottom="@dimen/margin_60px"
            android:textSize="@dimen/text_m" />

        <com.mobile.components.customfontviews.TextView
            android:id="@+id/kickout_second_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/kickout_first_text"
            android:text="@string/kickout_page_text2"
            android:textColor="@color/grey_middledark"
            android:textSize="@dimen/text_m" />

    </RelativeLayout>

</RelativeLayout>