<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/margin_16dp"
        android:paddingRight="@dimen/margin_16dp"
        android:paddingTop="48dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/RegistrationFormEditTextTheme">

            <EditText
                android:id="@+id/login_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_address"
                android:inputType="textEmailAddress"
                android:text=""
                android:textSize="14sp"
                android:theme="@style/RegistrationFormEditTextTheme" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:theme="@style/RegistrationFormEditTextTheme">

            <EditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textSize="14sp"
                android:theme="@style/RegistrationFormEditTextTheme" />
        </android.support.design.widget.TextInputLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_20dp" />

        <com.mobile.components.customfontviews.TextView
            android:id="@+id/login_email_button_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fgt_pass"
            android:textColor="@color/link_color"
            android:textSize="12sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_20dp" />


        <com.mobile.components.customfontviews.Button
            android:id="@+id/login_button_continue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:background="@drawable/btn_primary_selector"
            android:text="@string/login_label"
            android:textColor="@color/white" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_20dp" />

        <com.mobile.components.customfontviews.TextView
            android:id="@+id/continue_without_log_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/continue_without_log_in"
            android:textAlignment="center"
            android:textColor="@color/blue_app_primary"
            android:textSize="12sp"
            android:visibility="gone"
            app:met_primaryColor="@color/transparent" />

    </LinearLayout>
</ScrollView>