<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentTop="true"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.mobile.components.customfontviews.TextView
            android:id="@+id/user_data_title"
            style="@style/HeaderStyle"
            android:layout_alignParentTop="true"
            android:text="@string/personal_data_label"
            android:textStyle="bold"/>

        <LinearLayout
            android:id="@+id/user_data_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/user_data_title"
            android:layout_marginLeft="@dimen/margin_padding_l"
            android:layout_marginRight="@dimen/margin_padding_l"
            android:orientation="vertical"
            android:paddingBottom="@dimen/margin_padding_l">

        </LinearLayout>

        <com.mobile.components.customfontviews.TextView
            android:id="@+id/user_data_save_button"
            style="@style/Button_1.Shop"
            android:layout_below="@id/user_data_container"
            android:layout_marginBottom="@dimen/margin_padding_l"
            android:layout_marginLeft="@dimen/margin_padding_l"
            android:layout_marginRight="@dimen/margin_padding_l"
            android:text="@string/save_label" />


        <com.mobile.components.customfontviews.TextView
            android:id="@+id/change_password_title"
            style="@style/HeaderStyle"
            android:layout_below="@id/user_data_save_button"
            android:text="@string/password"
            android:textStyle="bold" />


        <LinearLayout
            android:id="@+id/change_password_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/change_password_title"
            android:layout_marginBottom="@dimen/margin_padding_l"
            android:layout_marginLeft="@dimen/margin_padding_l"
            android:layout_marginRight="@dimen/margin_padding_l"
            android:orientation="horizontal" />

        <com.mobile.components.customfontviews.TextView
            android:id="@+id/change_password_save_button"
            style="@style/Button_1.Shop"
            android:layout_below="@+id/change_password_layout"
            android:layout_marginLeft="@dimen/margin_padding_l"
            android:layout_marginRight="@dimen/margin_padding_l"
            android:contentDescription="@string/myaccount_save_description"
            android:text="@string/change_password" />

        <Space
            android:layout_width="match_parent"
            android:layout_below="@id/change_password_save_button"
            android:layout_height="@dimen/margin_padding_l" />
    </RelativeLayout>

</ScrollView>
